--- a/Projekt MVC/Views/Home/Index.cshtml
+++ b/Projekt MVC/Views/Home/Index.cshtml
@@ -5,3 +5,15 @@
 <h1> YO </h1>
 
 <span>Trzeba zrobić jakiś plan na wygląd tego forum</span>
+
+<html>
+    <head>
+
+    </head>
+
+    <body>
+
+        <button class="btn btn-outline-secondary" style="margin-left: 850px">Twój profil</button>
+
+    </body>
+</html>
