--- a/Projekt MVC/wwwroot/css/site.css
+++ b/Projekt MVC/wwwroot/css/site.css
@@ -102,6 +102,7 @@ label {
 
 textarea {
     width: 100%;
+    height: 400px;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
