--- a/Projekt MVC/Views/Home/Index.cshtml
+++ b/Projekt MVC/Views/Home/Index.cshtml
@@ -3,6 +3,15 @@
 
 @{
     ViewData["Title"] = "Home Page";
+
+    if (ViewBag.UserId == null)
+    {
+        Layout = "_LayoutNieZalogowany";
+    }
+    else
+    {
+        Layout = "_Layout";
+    }
 }
 
 <h1> Dyskusje: </h1>
