--- a/Projekt MVC/Views/Home/StwórzDyskusje.cshtml
+++ b/Projekt MVC/Views/Home/StwórzDyskusje.cshtml
@@ -1,4 +1,4 @@
-﻿@model Projekt_MVC.Models.Dyskusja
+﻿@model Projekt_MVC.ViewModels.DodawanieDyskusji
 
 @{
     ViewData["Title"] = "Stwórz Dyskusje";
