--- a/Projekt MVC/Views/Shared/_Layout.cshtml
+++ b/Projekt MVC/Views/Shared/_Layout.cshtml
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header style="border-bottom ; box-shadow">
-        <a href="Index" class="ForumOdnosnik">Forum</a>
+        <form asp-controller="Home" asp-action="Index" method="post">
+            <button type="submit" class="ForumOdnosnik">Forum</button>
+        </form>
 
         <form asp-controller="Home" asp-action="StwórzDyskusje" method="post">
             <button type="submit" class="StworzDyskusje">Stwórz Dyskusję</button>
@@ -22,7 +24,7 @@
             <button type="submit" class="btn btn-outline-secondary" style="margin-left: 40px; margin-right: 100px">Twój profil</button>
         </form>
 
-        <form asp-controller="Home" asp-action="Logowanie" method="post">
+        <form asp-controller="Rejestracja" asp-action="Logowanie" method="post">
             <button type="submit" class="Wyloguj">Wyloguj</button>
         </form>
 
