--- a/Projekt MVC/Views/Shared/_LayoutNieZalogowany.cshtml
+++ b/Projekt MVC/Views/Shared/_LayoutNieZalogowany.cshtml
@@ -10,9 +10,22 @@
 </head>
 <body>
     <header style="border-bottom ; box-shadow">
-
         <form asp-controller="Home" asp-action="Index" method="post">
             <button type="submit" class="ForumOdnosnik">Forum</button>
+        </form>
+
+        <form asp-controller="Rejestracja" asp-action="Index" method="post">
+            <button type="submit" class="StworzDyskusje">Stwórz Dyskusję</button>
+        </form>
+
+        <input type="text" placeholder="Wyszukaj Dyskusji" class="form-control ml-2" style="width: 700px; margin-right: 100px ; margin-left: 85px">
+
+        <form asp-controller="Rejestracja" asp-action="Index" method="post">
+            <button type="submit" class="btn btn-outline-secondary" style="margin-left: 40px; margin-right: 100px">Twój profil</button>
+        </form>
+
+        <form asp-controller="Rejestracja" asp-action="Index" method="post">
+            <button type="submit" class="loginPrzycisk">Zaloguj Się</button>
         </form>
 
     </header>
