Coś jest źle z modelem Odpowiedzi, ale teraz nie mogę tego zrobić

--- a/Projekt MVC/Views/Home/Index.cshtml
+++ b/Projekt MVC/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
         <div class="list-group">
             @foreach (var dyskusja in Model)
             {
-                <a href="#" class="list-group-item list-group-item-action">
+                <a href="Home/Dyskusja/@dyskusja.DyskusjaId" class="list-group-item list-group-item-action">
                     @dyskusja.Temat
                 </a>
             }
@@ -35,3 +35,12 @@
     }
 
 </html>
+
+<script>
+
+    function f()
+    {
+
+    }
+
+</script>
