--- a/Projekt MVC/Views/Home/Dyskusja.cshtml
+++ b/Projekt MVC/Views/Home/Dyskusja.cshtml
@@ -1,9 +1,41 @@
 ﻿@model Projekt_MVC.Models.Dyskusja
 
 @{
+    var userRole = Context.Session.GetString("UserRole");
 }
 
-<!--<h1>Dyskusja użytkownika:</h1> -->
-<h3 style="text-align: center ; margin-top: 50px">@Model.Temat</h3>
 
+<h3 style="text-align: center; margin-top: 50px">@Model.Temat</h3>
 <span style="margin-left: 300px; margin-right: 300px; margin-top: 100px">@Model.Opis</span>
+
+
+@if (Model.Odpowiedzi != null && Model.Odpowiedzi.Any())
+{
+    <h4>Odpowiedzi:</h4>
+    <ul>
+        @foreach (var odpowiedz in Model.Odpowiedzi)
+        {
+            
+            <li>
+                <b>@odpowiedz.Autor </b>, <p>@odpowiedz.Tresc </p>, <p>@odpowiedz.DataOdpowiedzi</p>
+            </li>
+
+            if(userRole == "admin")
+            {
+                <form asp-action="EdytujOdpowiedz" asp-controller="Admin">
+                    <input type="hidden" name="IdOdpowiedzi" value="@odpowiedz.OdpowiedzId">
+                    <button>Edytuj Odpowiedź</button>
+                </form>
+            }
+        }
+    </ul>
+}
+
+
+<form asp-controller="Home" asp-action="NapiszOdpowiedz" method="post">
+    <div>
+        <input type="hidden" name="IdDyskusji" value="@Model.DyskusjaId">
+        <textarea type="text" name="odpowiedz" placeholder="Napisz odpowiedź..." class="OdpowiedzTextArea"></textarea>
+        <button type="submit">Odpowiedz</button>
+    </div>
+</form>
