Trochę poprawione modele - przynajmniej się kompiluje teraz

--- a/Projekt MVC/Views/admin/ZarzadzajDyskusjami.cshtml
+++ b/Projekt MVC/Views/admin/ZarzadzajDyskusjami.cshtml
@@ -19,7 +19,7 @@
             {
                 <div class="list-group-item">
                     <div>
-                        <p> autor: <b>@dyskusja.Owner.Nazwa</b>, Temat: <b>@dyskusja.Temat</b></p>
+                        <p> autor: <b>@dyskusja.Wlasciciel.Nazwa</b>, Temat: <b>@dyskusja.Temat</b></p>
                         <p>@dyskusja.Opis</p>
                     </div>
                     <div class="button-container">
