baza danych jest, ale nie chce się stworzyć cała idk dlaczego, nie da się tworzyć dyskusji bo dodałem fora - tak jak w zadaniu

--- a/Projekt MVC/Views/Home/Dyskusja.cshtml
+++ b/Projekt MVC/Views/Home/Dyskusja.cshtml
@@ -17,7 +17,7 @@
         {
             
             <li>
-                <b>@odpowiedz.Autor </b>, <p>@odpowiedz.Tresc </p>, <p>@odpowiedz.DataOdpowiedzi</p>
+                <b>@odpowiedz.Autor </b>, <p>@odpowiedz.Tresc </p>,
             </li>
 
             if(userRole == "admin")
