--- a/Projekt MVC/Views/admin/ZarzadzajDyskusjami.cshtml
+++ b/Projekt MVC/Views/admin/ZarzadzajDyskusjami.cshtml
@@ -23,10 +23,10 @@
                         <p>@dyskusja.Opis</p>
                     </div>
                     <div class="button-container">
-                        <!form method="post" asp-action="UsunDyskusje" asp-controller="Admin">
+                        <form method="post" asp-action="UsunDyskusje" asp-controller="Admin">
                         <input type="hidden" name="id" value="@dyskusja.DyskusjaId" />
                         <button type="submit" class="red-button" onclick="f(event)">Usuń</button>
-                        </!form>
+                        </form>
                     </div>
                 </div>
             }
