--- a/Projekt MVC/Views/Home/Profil.cshtml
+++ b/Projekt MVC/Views/Home/Profil.cshtml
@@ -45,7 +45,7 @@
                 <input class="inputProfilu" type="text" id="nazwa-uzytkownika" name="username">
                 <!--h2 style="text-align: center">Zmiana zdjęcia profilowego: </!--h2>
                 <input class="inputProfilu" type="file" id="plik-avataru" name="plik-avataru" accept="image/*" -->
-                <label for="czas-wylogowania" class="labelProfilu">Czas wylogowania:</label>
+                <label for="czas-wylogowania" class="labelProfilu">Czas nieaktywności do wylogowania (obecnie <b>@ViewBag.LogoutTime minut</b>)</label>
                 <input class="inputProfilu" type="number" id="czas-wylogowania" name="logoutTime">
                 <button type="submit" class="buttonProfilu">Zapisz zmiany</button>
             </form>
