--- a/Projekt MVC/Views/Shared/_LayoutNieWForum.cshtml
+++ b/Projekt MVC/Views/Shared/_LayoutNieWForum.cshtml
@@ -37,8 +37,8 @@
                 <button type="submit" class="ForumOdnosnik">Forum</button>
             </form>
 
-            <form asp-controller="Admin" asp-action="ZarzadzajDyskusjami" method="post">
-                <button type="submit" class="StworzDyskusje">Zarządzaj Dyskusjami</button>
+            <form asp-controller="Admin" asp-action="ZarzadzajUżytkownikami" method="post">
+                <button type="submit" class="StworzDyskusje">Zarządzaj Użytkownikami</button>
             </form>
 
             <input type="text" placeholder="Wyszukaj Dyskusji" class="form-control ml-2" style="width: 700px; margin-right: 100px ; margin-left: 85px">
