--- a/Projekt MVC/Views/Home/Index.cshtml
+++ b/Projekt MVC/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@model List<Projekt_MVC.Models.Forum>
 
-
 @{
     ViewData["Title"] = "Home Page";
 
@@ -23,16 +22,24 @@
 }
 else
 {
-    <p>Fora: </p>
-    <div class="list-group">
-        @foreach (var forum in Model)
-        {
-            <a href="Home/PrzejdzDoFora/@forum.IdForum" class="list-group-item list-group-item-action">
-                @forum.Nazwa - @forum.Opis
-            </a>
-        }
-    </div>
-
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Nazwa Forum</th>
+                <th>Opis</th>
+                <th>Liczba Dyskusji</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var forum in Model)
+            {
+                <tr>
+                    <td><a href="Home/PrzejdzDoFora/@forum.IdForum">@forum.Nazwa</a></td>
+                    <td>@forum.Opis</td>
+                    <td>@(forum.Dyskusje != null ? forum.Dyskusje.Count : 0)</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
-
 </html>
